Fix .table's color in dark mode

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -337,6 +337,10 @@ table tr:nth-child(2n) {
 	background-color: var(--table-alt-bg);
 }
 
+.table {
+	color: inherit;
+}
+
 // Buttons
 kbd {
 	padding: 3px 6px;
